Jun 04, 2015 - chris ---------------------------------------------------
o Fixing compilation with --disable-remote

Jun 03, 2015 - chris ---------------------------------------------------
o Make sure that journal is correclty cleared after recovery

May 26, 2015 - chris ---------------------------------------------------
o Make sure that errors are not ignored when creating remote cursors
	(thanks, Ciprian Niculescu)

May 07, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.11

May 06, 2015 - chris ---------------------------------------------------
o C++ API no longer throws exceptions in destructors (thanks, Michael Möllney)
o issue #49: fixed approx. matching issue with remote server

May 04, 2015 - chris ---------------------------------------------------
o issue #53: fixed race condition on Win32

Apr 06, 2015 - chris ---------------------------------------------------
o issue #52: fixed cursor iteration w/ txns and approx matching
o issue #50: removing problematic debug checks

Apr 04, 2015 - chris ---------------------------------------------------
o Add InsertRecNo method to hamsterdb-dotnet (thanks, mjmckp)

Mar 06, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.10

Feb 18, 2015 - chris ---------------------------------------------------
o When reading records from mmapped storage, a pointer into the storage
	is returned and the record data is no longer copied

Feb 16, 2015 - chris ---------------------------------------------------
o The page cache eviction was moved to a background thread

Feb 03, 2015 - chris ---------------------------------------------------
o Default compilation flag is now -O3

Jan 23, 2015 - chris ---------------------------------------------------
o Fixed FreeBSD compilation errors (thanks, Heping Wen)

Jan 22, 2015 - chris ---------------------------------------------------